# homomorphic-encryption

./: bfv_test.py  paillier_test.py  secure_tally_test.py
seal_test/: CMakeLists.txt  seal_test.cpp
